spade-tests/src/snapshots/spade_tests__typeinference__error_on_oversized_int_literal.snap
---
source: spade-tests/src/typeinference.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Integer value does not fit in int<8>
  ┌─ testinput:2:5
  │
2 │     128
  │     ^^^ 128 does not fit in an int<8>


